about screen overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -703,32 +703,28 @@ a {
 }
 
 .abt-m-ctnr {
-  display: grid;
-  grid-template-rows: 1fr 1fr;
-  padding: 2rem 1rem 2rem 1rem;
-
+  padding: 0;
+  height: 95vh;
   background-color: #f0f6ff;
-  position: relative;
 }
 .abt-bg {
-  position: absolute;
-  right: 0;
   display: none;
-  bottom: 0;
-  transform: translate();
-  background: url(assets/abt-bg.svg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  width: 95%;
-  height: 100%;
+
+  width: 100%;
+  height: 100% !important;
+  display: grid;
+
+  grid-template-rows: 1fr 1fr;
+  padding: 2rem 1rem 2rem 1rem;
+  position: relative;
 }
-.abt-m-ctnr .main-ttl {
+.abt-bg .main-ttl {
   color: var(--pmr-clr);
   position: relative;
   padding: 4rem 0 0 15%;
   margin-bottom: 1rem;
 }
-.abt-m-ctnr .txt {
+.abt-bg .txt {
   position: relative;
   padding: 0 10%;
 }
@@ -1724,10 +1720,10 @@ html.has-scroll-dragging {
     font-size: 1rem;
     text-align: left;
   }
-  .abt-bg {
-    height: 87%;
-    display: block;
-  }
+  /*  .abt-bg {
+    height: 100%;
+    width: 100%;
+  } */
   .abt-m-sc2 {
     background: linear-gradient(
       90deg,
@@ -1786,12 +1782,13 @@ html.has-scroll-dragging {
   .tch-ctnr li {
     font-size: 18px !important;
   }
-  .abt-m-ctnr .main-ttl {
+  .abt-bg .main-ttl {
     color: var(--pmr-clr);
     position: relative;
     text-align: left;
+    padding-top: 0 !important;
   }
-  .abt-m-ctnr .txt {
+  .abt-bg .txt {
     position: relative;
     padding-left: 15%;
   }
@@ -2140,15 +2137,26 @@ html.has-scroll-dragging {
     background-color: var(--pmr-clr);
   }
   .abt-m-ctnr {
+    background-color: var(--pmr-clr);
+    padding-top: calc(66px + 1rem) !important;
+    height: 90vh;
+  }
+  .abt-bg {
     display: grid;
-    grid-template-rows: auto;
+    grid-template-rows: 1fr;
+
     grid-template-columns: 1fr 1fr;
     padding-top: 0;
-    background-color: var(--pmr-clr);
-    min-height: 95vh !important;
+    background-color: #f0f6ff;
+    border-radius: 10rem 0 0 10rem;
+    margin-left: 5%;
+  }
+  .fst-wrp {
+    align-self: center;
   }
   .abt-m-img {
     height: 70%;
+    align-self: center;
   }
   .abt-m-lg-ctnr {
     width: 20rem;
@@ -2308,7 +2316,7 @@ html.has-scroll-dragging {
 }
 
 @media screen and (min-width: 1440px) {
-  /* NEW MEMBERSHIP Plan section commented .plans-ctnr {
+  /* NEW MEMBERSHIP Plan section commentted .plans-ctnr {
     justify-content: center;
   } */
   .ctc-scrn-ctnr {
@@ -2402,12 +2410,17 @@ html.has-scroll-dragging {
   .frth-ctnr {
     padding: 2rem 15% 2rem 7% !important;
   }
-  .abt-m-ctnr {
-    padding: 2rem 7% 2rem 15% !important;
+  .abt-bg {
+    padding: 2rem 7% 2rem 8% !important;
   }
-
+  .abt-m-ctnr {
+    padding: 0 !important ;
+    padding-top: calc(104.19px + 2rem) !important;
+  }
+  .abt-bg .main-ttl {
+    padding-top: 0 !important;
+  }
   .hdr-ctnr,
-  .abt-m-ctnr,
   .abt-m-sc2,
   .scss-scrn,
   .ctnr,
